syntax = "proto3";

package rivet.backend.pkg.party.msg.state_mm_lobby_find;

import "proto/common.proto";
import "proto/backend/matchmaker/query.proto";

/// name = "msg-party-state-mm-lobby-find"
/// parameters = [
/// 	{ name = "party_id" },
/// ]
message Message {
	rivet.common.Uuid party_id = 1;
	rivet.common.Uuid namespace_id = 2;

	oneof query {
		rivet.backend.matchmaker.query.Direct direct = 101;
		rivet.backend.matchmaker.query.LobbyGroup lobby_group = 102;
	};
}
