syntax = "proto3";

package rivet.backend.pkg.team.billing_aggregate;

import "proto/common.proto";
import "proto/backend/billing.proto";

message Request {
	message TeamBillingRequest {
		rivet.common.Uuid team_id = 1;
		int64 query_start = 2;
		int64 query_end = 3;
	}

	repeated TeamBillingRequest teams = 1;
}

message Response {
	message TeamBillingMetrics {
		rivet.common.Uuid team_id = 1;
		repeated rivet.backend.billing.GameLobbyMetrics games = 2;
	}

	repeated TeamBillingMetrics teams = 1;
}
